--- a/Tasker/WebApp/Views/Users/Delete.cshtml
+++ b/Tasker/WebApp/Views/Users/Delete.cshtml
@@ -42,6 +42,12 @@
             @Html.DisplayFor(model => model.UserType.Name)
         </dd >
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AppUser)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AppUser.FirstName)
+        </dd >
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HourlyRate)
         </dt>
         <dd class = "col-sm-10">
