--- a/Tasker/WebApp/Views/Users/Details.cshtml
+++ b/Tasker/WebApp/Views/Users/Details.cshtml
@@ -41,6 +41,12 @@
             @Html.DisplayFor(model => model.UserType.Name)
         </dd>
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.AppUser)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.AppUser.FirstName)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HourlyRate)
         </dt>
         <dd class = "col-sm-10">
