--- a/Tasker/WebApp/Views/Users/Edit.cshtml
+++ b/Tasker/WebApp/Views/Users/Edit.cshtml
@@ -38,6 +38,11 @@
                 <span asp-validation-for="UserTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="AppUserId" class="control-label"></label>
+                <select asp-for="AppUserId" class="form-control" asp-items="ViewBag.AppUserId"></select>
+                <span asp-validation-for="AppUserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="HourlyRateId" class="control-label"></label>
                 <select asp-for="HourlyRateId" class="form-control" asp-items="ViewBag.HourlyRateId"></select>
                 <span asp-validation-for="HourlyRateId" class="text-danger"></span>
