--- a/Tasker/WebApp/Views/Users/Index.cshtml
+++ b/Tasker/WebApp/Views/Users/Index.cshtml
@@ -28,6 +28,9 @@
                 @Html.DisplayNameFor(model => model.UserType)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.AppUser)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.HourlyRate)
             </th>
             <th></th>
@@ -50,6 +53,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UserType.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AppUser.FirstName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.HourlyRate.Id)
