--- a/Tasker/WebApp/Views/Cities/Create.cshtml
+++ b/Tasker/WebApp/Views/Cities/Create.cshtml
@@ -1,4 +1,4 @@
-@model Domain.City
+@model CityCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,18 +13,18 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="City.Name" class="control-label"></label>
+                <input asp-for="City.Name" class="form-control" />
+                <span asp-validation-for="City.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="City.Comment" class="control-label"></label>
+                <input asp-for="City.Comment" class="form-control" />
+                <span asp-validation-for="City.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" class ="form-control" asp-items="ViewBag.CountryId"></select>
+                <label asp-for="City.CountryId" class="control-label"></label>
+                <select asp-for="City.CountryId" class ="form-control" asp-items="Model.CountrySelectList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
