--- a/Tasker/WebApp/Views/Cities/Edit.cshtml
+++ b/Tasker/WebApp/Views/Cities/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.City
+@model CityEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,21 +13,21 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="City.Name" class="control-label"></label>
+                <input asp-for="City.Name" class="form-control" />
+                <span asp-validation-for="City.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="City.Comment" class="control-label"></label>
+                <input asp-for="City.Comment" class="form-control" />
+                <span asp-validation-for="City.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId"></select>
-                <span asp-validation-for="CountryId" class="text-danger"></span>
+                <label asp-for="City.CountryId" class="control-label"></label>
+                <select asp-for="City.CountryId" class="form-control" asp-items="Model.CountrySelectList"></select>
+                <span asp-validation-for="City.CountryId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="City.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
