--- a/Tasker/WebApp/Views/IdentificationTypes/Delete.cshtml
+++ b/Tasker/WebApp/Views/IdentificationTypes/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Domain.IdentificationType
+@model Task<Domain.IdentificationType>
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,16 +12,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor<>(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor<>(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comment)
+            @Html.DisplayNameFor<>(model => model.Comment)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comment)
+            @Html.DisplayFor<>(model => model.Comment)
         </dd>
     </dl>
     
