--- a/Tasker/WebApp/Views/InvoiceLines/Edit.cshtml
+++ b/Tasker/WebApp/Views/InvoiceLines/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.InvoiceLine
+@model InvoiceLinesEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,51 +13,51 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
+                <label asp-for="InvoiceLine.Price" class="control-label"></label>
+                <input asp-for="InvoiceLine.Price" class="form-control" />
+                <span asp-validation-for="InvoiceLine.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Amount" class="control-label"></label>
-                <input asp-for="Amount" class="form-control" />
-                <span asp-validation-for="Amount" class="text-danger"></span>
+                <label asp-for="InvoiceLine.Amount" class="control-label"></label>
+                <input asp-for="InvoiceLine.Amount" class="form-control" />
+                <span asp-validation-for="InvoiceLine.Amount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VATpercentage" class="control-label"></label>
-                <input asp-for="VATpercentage" class="form-control" />
-                <span asp-validation-for="VATpercentage" class="text-danger"></span>
+                <label asp-for="InvoiceLine.VATpercentage" class="control-label"></label>
+                <input asp-for="InvoiceLine.VATpercentage" class="form-control" />
+                <span asp-validation-for="InvoiceLine.VATpercentage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VAT" class="control-label"></label>
-                <input asp-for="VAT" class="form-control" />
-                <span asp-validation-for="VAT" class="text-danger"></span>
+                <label asp-for="InvoiceLine.VAT" class="control-label"></label>
+                <input asp-for="InvoiceLine.VAT" class="form-control" />
+                <span asp-validation-for="InvoiceLine.VAT" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TotalWithoutVAT" class="control-label"></label>
-                <input asp-for="TotalWithoutVAT" class="form-control" />
-                <span asp-validation-for="TotalWithoutVAT" class="text-danger"></span>
+                <label asp-for="InvoiceLine.TotalWithoutVAT" class="control-label"></label>
+                <input asp-for="InvoiceLine.TotalWithoutVAT" class="form-control" />
+                <span asp-validation-for="InvoiceLine.TotalWithoutVAT" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
-                <input asp-for="Total" class="form-control" />
-                <span asp-validation-for="Total" class="text-danger"></span>
+                <label asp-for="InvoiceLine.Total" class="control-label"></label>
+                <input asp-for="InvoiceLine.Total" class="form-control" />
+                <span asp-validation-for="InvoiceLine.Total" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="InvoiceLine.Comment" class="control-label"></label>
+                <input asp-for="InvoiceLine.Comment" class="form-control" />
+                <span asp-validation-for="InvoiceLine.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InvoiceId" class="control-label"></label>
-                <select asp-for="InvoiceId" class="form-control" asp-items="ViewBag.InvoiceId"></select>
-                <span asp-validation-for="InvoiceId" class="text-danger"></span>
+                <label asp-for="InvoiceLine.InvoiceId" class="control-label"></label>
+                <select asp-for="InvoiceLine.InvoiceId" class="form-control" asp-items="Model.InvoiceSelectList"></select>
+                <span asp-validation-for="InvoiceLine.InvoiceId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskId" class="control-label"></label>
-                <select asp-for="TaskId" class="form-control" asp-items="ViewBag.TaskId"></select>
-                <span asp-validation-for="TaskId" class="text-danger"></span>
+                <label asp-for="InvoiceLine.TaskId" class="control-label"></label>
+                <select asp-for="InvoiceLine.TaskId" class="form-control" asp-items="Model.TaskSelectList"></select>
+                <span asp-validation-for="InvoiceLine.TaskId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="InvoiceLine.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
