--- a/Tasker/WebApp/Views/Payments/Edit.cshtml
+++ b/Tasker/WebApp/Views/Payments/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.Payment
+@model PaymentEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,36 +13,36 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="PaymentCode" class="control-label"></label>
-                <input asp-for="PaymentCode" class="form-control" />
-                <span asp-validation-for="PaymentCode" class="text-danger"></span>
+                <label asp-for="Payment.PaymentCode" class="control-label"></label>
+                <input asp-for="Payment.PaymentCode" class="form-control" />
+                <span asp-validation-for="Payment.PaymentCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TimeOfPayment" class="control-label"></label>
-                <input asp-for="TimeOfPayment" class="form-control" />
-                <span asp-validation-for="TimeOfPayment" class="text-danger"></span>
+                <label asp-for="Payment.TimeOfPayment" class="control-label"></label>
+                <input asp-for="Payment.TimeOfPayment" class="form-control" />
+                <span asp-validation-for="Payment.TimeOfPayment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Total" class="control-label"></label>
-                <input asp-for="Total" class="form-control" />
-                <span asp-validation-for="Total" class="text-danger"></span>
+                <label asp-for="Payment.Total" class="control-label"></label>
+                <input asp-for="Payment.Total" class="form-control" />
+                <span asp-validation-for="Payment.Total" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="Payment.Comment" class="control-label"></label>
+                <input asp-for="Payment.Comment" class="form-control" />
+                <span asp-validation-for="Payment.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MeansOfPaymentId" class="control-label"></label>
-                <select asp-for="MeansOfPaymentId" class="form-control" asp-items="ViewBag.MeansOfPaymentId"></select>
-                <span asp-validation-for="MeansOfPaymentId" class="text-danger"></span>
+                <label asp-for="Payment.MeansOfPaymentId" class="control-label"></label>
+                <select asp-for="Payment.MeansOfPaymentId" class="form-control" asp-items="Model.MeansOfPaymentSelectList"></select>
+                <span asp-validation-for="Payment.MeansOfPaymentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="InvoiceId" class="control-label"></label>
-                <select asp-for="InvoiceId" class="form-control" asp-items="ViewBag.InvoiceId"></select>
-                <span asp-validation-for="InvoiceId" class="text-danger"></span>
+                <label asp-for="Payment.InvoiceId" class="control-label"></label>
+                <select asp-for="Payment.InvoiceId" class="form-control" asp-items="Model.InvoiceSelectList"></select>
+                <span asp-validation-for="Payment.InvoiceId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Payment.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
