--- a/Tasker/WebApp/Views/Prices/Edit.cshtml
+++ b/Tasker/WebApp/Views/Prices/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.Price
+@model PriceEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,31 +13,31 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Amount" class="control-label"></label>
-                <input asp-for="Amount" class="form-control" />
-                <span asp-validation-for="Amount" class="text-danger"></span>
+                <label asp-for="Price.Amount" class="control-label"></label>
+                <input asp-for="Price.Amount" class="form-control" />
+                <span asp-validation-for="Price.Amount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="Price.Start" class="control-label"></label>
+                <input asp-for="Price.Start" class="form-control" />
+                <span asp-validation-for="Price.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="Price.End" class="control-label"></label>
+                <input asp-for="Price.End" class="form-control" />
+                <span asp-validation-for="Price.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="Price.Comment" class="control-label"></label>
+                <input asp-for="Price.Comment" class="form-control" />
+                <span asp-validation-for="Price.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PriceListId" class="control-label"></label>
-                <select asp-for="PriceListId" class="form-control" asp-items="ViewBag.PriceListId"></select>
-                <span asp-validation-for="PriceListId" class="text-danger"></span>
+                <label asp-for="Price.PriceListId" class="control-label"></label>
+                <select asp-for="Price.PriceListId" class="form-control" asp-items="Model.PriceListSelectList"></select>
+                <span asp-validation-for="Price.PriceListId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Price.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
