--- a/Tasker/WebApp/Views/Reviews/Create.cshtml
+++ b/Tasker/WebApp/Views/Reviews/Create.cshtml
@@ -1,4 +1,4 @@
-@model Domain.Review
+@model ReviewCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,22 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
-                <span asp-validation-for="Rating" class="text-danger"></span>
+                <label asp-for="Review.Rating" class="control-label"></label>
+                <input asp-for="Review.Rating" class="form-control" />
+                <span asp-validation-for="Review.Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="Review.Comment" class="control-label"></label>
+                <input asp-for="Review.Comment" class="form-control" />
+                <span asp-validation-for="Review.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskId" class="control-label"></label>
-                <select asp-for="TaskId" class ="form-control" asp-items="ViewBag.TaskId"></select>
+                <label asp-for="Review.TaskId" class="control-label"></label>
+                <select asp-for="Review.TaskId" class ="form-control" asp-items="Model.TaskSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class ="form-control" asp-items="ViewBag.AppUserId"></select>
+                <label asp-for="Review.AppUserId" class="control-label"></label>
+                <select asp-for="Review.AppUserId" class ="form-control" asp-items="Model.AppUserSelectList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
