--- a/Tasker/WebApp/Views/Tasks/Create.cshtml
+++ b/Tasker/WebApp/Views/Tasks/Create.cshtml
@@ -1,4 +1,4 @@
-@model Domain.Task
+@model TaskCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,27 +13,27 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="Task.Description" class="control-label"></label>
+                <input asp-for="Task.Description" class="form-control" />
+                <span asp-validation-for="Task.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TimeEstimate" class="control-label"></label>
-                <input asp-for="TimeEstimate" class="form-control" />
-                <span asp-validation-for="TimeEstimate" class="text-danger"></span>
+                <label asp-for="Task.TimeEstimate" class="control-label"></label>
+                <input asp-for="Task.TimeEstimate" class="form-control" />
+                <span asp-validation-for="Task.TimeEstimate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
-                <span asp-validation-for="Address" class="text-danger"></span>
+                <label asp-for="Task.Address" class="control-label"></label>
+                <input asp-for="Task.Address" class="form-control" />
+                <span asp-validation-for="Task.Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskTypeId" class="control-label"></label>
-                <select asp-for="TaskTypeId" class ="form-control" asp-items="ViewBag.TaskTypeId"></select>
+                <label asp-for="Task.TaskTypeId" class="control-label"></label>
+                <select asp-for="Task.TaskTypeId" class ="form-control" asp-items="Model.TaskTypeSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class ="form-control" asp-items="ViewBag.AppUserId"></select>
+                <label asp-for="Task.AppUserId" class="control-label"></label>
+                <select asp-for="Task.AppUserId" class ="form-control" asp-items="Model.AppUserSelectList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
