--- a/Tasker/WebApp/Views/UserInGroups/Create.cshtml
+++ b/Tasker/WebApp/Views/UserInGroups/Create.cshtml
@@ -1,4 +1,4 @@
-@model Domain.UserInGroup
+@model UserInGroupCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,22 +13,22 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="UserInGroup.Start" class="control-label"></label>
+                <input asp-for="UserInGroup.Start" class="form-control" />
+                <span asp-validation-for="UserInGroup.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="UserInGroup.End" class="control-label"></label>
+                <input asp-for="UserInGroup.End" class="form-control" />
+                <span asp-validation-for="UserInGroup.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                <label asp-for="UserInGroup.UserId" class="control-label"></label>
+                <select asp-for="UserInGroup.UserId" class ="form-control" asp-items="Model.UserSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="UserGroupId" class="control-label"></label>
-                <select asp-for="UserGroupId" class ="form-control" asp-items="ViewBag.UserGroupId"></select>
+                <label asp-for="UserInGroup.UserGroupId" class="control-label"></label>
+                <select asp-for="UserInGroup.UserGroupId" class ="form-control" asp-items="Model.UserGroupSelectList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
