--- a/Tasker/WebApp/Views/UserInGroups/Edit.cshtml
+++ b/Tasker/WebApp/Views/UserInGroups/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.UserInGroup
+@model UserInGroupEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,26 +13,26 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="UserInGroup.Start" class="control-label"></label>
+                <input asp-for="UserInGroup.Start" class="form-control" />
+                <span asp-validation-for="UserInGroup.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="UserInGroup.End" class="control-label"></label>
+                <input asp-for="UserInGroup.End" class="form-control" />
+                <span asp-validation-for="UserInGroup.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <label asp-for="UserInGroup.UserId" class="control-label"></label>
+                <select asp-for="UserInGroup.UserId" class="form-control" asp-items="Model.UserSelectList"></select>
+                <span asp-validation-for="UserInGroup.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserGroupId" class="control-label"></label>
-                <select asp-for="UserGroupId" class="form-control" asp-items="ViewBag.UserGroupId"></select>
-                <span asp-validation-for="UserGroupId" class="text-danger"></span>
+                <label asp-for="UserInGroup.UserGroupId" class="control-label"></label>
+                <select asp-for="UserInGroup.UserGroupId" class="form-control" asp-items="Model.UserGroupSelectList"></select>
+                <span asp-validation-for="UserInGroup.UserGroupId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="UserInGroup.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
