--- a/Tasker/WebApp/Views/UserOnAddresses/Create.cshtml
+++ b/Tasker/WebApp/Views/UserOnAddresses/Create.cshtml
@@ -1,4 +1,4 @@
-@model Domain.UserOnAddress
+@model UserOnAddressCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,26 +13,26 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="UserOnAddress.Start" class="control-label"></label>
+                <input asp-for="UserOnAddress.Start" class="form-control" />
+                <span asp-validation-for="UserOnAddress.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="UserOnAddress.End" class="control-label"></label>
+                <input asp-for="UserOnAddress.End" class="form-control" />
+                <span asp-validation-for="UserOnAddress.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
+                <label asp-for="UserOnAddress.UserId" class="control-label"></label>
+                <select asp-for="UserOnAddress.UserId" class ="form-control" asp-items="Model.UserSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AddressId" class="control-label"></label>
-                <select asp-for="AddressId" class ="form-control" asp-items="ViewBag.AddressId"></select>
+                <label asp-for="UserOnAddress.AddressId" class="control-label"></label>
+                <select asp-for="UserOnAddress.AddressId" class ="form-control" asp-items="Model.AddressSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class ="form-control" asp-items="ViewBag.AppUserId"></select>
+                <label asp-for="UserOnAddress.AppUserId" class="control-label"></label>
+                <select asp-for="UserOnAddress.AppUserId" class ="form-control" asp-items="Model.AppUserSelectList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
