--- a/Tasker/WebApp/Views/UserOnAddresses/Edit.cshtml
+++ b/Tasker/WebApp/Views/UserOnAddresses/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.UserOnAddress
+@model UserOnAddressEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,31 +13,31 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="UserOnAddress.Start" class="control-label"></label>
+                <input asp-for="UserOnAddress.Start" class="form-control" />
+                <span asp-validation-for="UserOnAddress.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="UserOnAddress.End" class="control-label"></label>
+                <input asp-for="UserOnAddress.End" class="form-control" />
+                <span asp-validation-for="UserOnAddress.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <label asp-for="UserOnAddress.UserId" class="control-label"></label>
+                <select asp-for="UserOnAddress.UserId" class="form-control" asp-items="Model.UserSelectList"></select>
+                <span asp-validation-for="UserOnAddress.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AddressId" class="control-label"></label>
-                <select asp-for="AddressId" class="form-control" asp-items="ViewBag.AddressId"></select>
-                <span asp-validation-for="AddressId" class="text-danger"></span>
+                <label asp-for="UserOnAddress.AddressId" class="control-label"></label>
+                <select asp-for="UserOnAddress.AddressId" class="form-control" asp-items="Model.AddressSelectList"></select>
+                <span asp-validation-for="UserOnAddress.AddressId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class="form-control" asp-items="ViewBag.AppUserId"></select>
-                <span asp-validation-for="AppUserId" class="text-danger"></span>
+                <label asp-for="UserOnAddress.AppUserId" class="control-label"></label>
+                <select asp-for="UserOnAddress.AppUserId" class="form-control" asp-items="Model.AppUserSelectList"></select>
+                <span asp-validation-for="UserOnAddress.AppUserId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="UserOnAddress.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
