--- a/Tasker/WebApp/Views/UserOnTasks/Create.cshtml
+++ b/Tasker/WebApp/Views/UserOnTasks/Create.cshtml
@@ -1,4 +1,4 @@
-@model Domain.UserOnTask
+@model UserOnTaskCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,30 +13,30 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="UserOnTask.Start" class="control-label"></label>
+                <input asp-for="UserOnTask.Start" class="form-control" />
+                <span asp-validation-for="UserOnTask.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="UserOnTask.End" class="control-label"></label>
+                <input asp-for="UserOnTask.End" class="form-control" />
+                <span asp-validation-for="UserOnTask.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskId" class="control-label"></label>
-                <select asp-for="TaskId" class ="form-control" asp-items="ViewBag.TaskId"></select>
+                <label asp-for="UserOnTask.TaskId" class="control-label"></label>
+                <select asp-for="UserOnTask.TaskId" class ="form-control" asp-items="Model.TaskSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="TaskGiverId" class="control-label"></label>
-                <select asp-for="TaskGiverId" class ="form-control" asp-items="ViewBag.TaskGiverId"></select>
+                <label asp-for="UserOnTask.TaskGiverId" class="control-label"></label>
+                <select asp-for="UserOnTask.TaskGiverId" class ="form-control" asp-items="Model.TaskGiverSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="TaskerId" class="control-label"></label>
-                <select asp-for="TaskerId" class ="form-control" asp-items="ViewBag.TaskerId"></select>
+                <label asp-for="UserOnTask.TaskerId" class="control-label"></label>
+                <select asp-for="UserOnTask.TaskerId" class ="form-control" asp-items="Model.TaskerSelectList"></select>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class ="form-control" asp-items="ViewBag.AppUserId"></select>
+                <label asp-for="UserOnTask.AppUserId" class="control-label"></label>
+                <select asp-for="UserOnTask.AppUserId" class ="form-control" asp-items="Model.AppUserSelectList"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
