--- a/Tasker/WebApp/Views/UserOnTasks/Edit.cshtml
+++ b/Tasker/WebApp/Views/UserOnTasks/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.UserOnTask
+@model UserOnTaskEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,36 +13,36 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="UserOnTask.Start" class="control-label"></label>
+                <input asp-for="UserOnTask.Start" class="form-control" />
+                <span asp-validation-for="UserOnTask.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="UserOnTask.End" class="control-label"></label>
+                <input asp-for="UserOnTask.End" class="form-control" />
+                <span asp-validation-for="UserOnTask.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskId" class="control-label"></label>
-                <select asp-for="TaskId" class="form-control" asp-items="ViewBag.TaskId"></select>
-                <span asp-validation-for="TaskId" class="text-danger"></span>
+                <label asp-for="UserOnTask.TaskId" class="control-label"></label>
+                <select asp-for="UserOnTask.TaskId" class="form-control" asp-items="Model.TaskSelectList"></select>
+                <span asp-validation-for="UserOnTask.TaskId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskGiverId" class="control-label"></label>
-                <select asp-for="TaskGiverId" class="form-control" asp-items="ViewBag.TaskGiverId"></select>
-                <span asp-validation-for="TaskGiverId" class="text-danger"></span>
+                <label asp-for="UserOnTask.TaskGiverId" class="control-label"></label>
+                <select asp-for="UserOnTask.TaskGiverId" class="form-control" asp-items="Model.TaskGiverSelectList"></select>
+                <span asp-validation-for="UserOnTask.TaskGiverId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TaskerId" class="control-label"></label>
-                <select asp-for="TaskerId" class="form-control" asp-items="ViewBag.TaskerId"></select>
-                <span asp-validation-for="TaskerId" class="text-danger"></span>
+                <label asp-for="UserOnTask.TaskerId" class="control-label"></label>
+                <select asp-for="UserOnTask.TaskerId" class="form-control" asp-items="Model.TaskerSelectList"></select>
+                <span asp-validation-for="UserOnTask.TaskerId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class="form-control" asp-items="ViewBag.AppUserId"></select>
-                <span asp-validation-for="AppUserId" class="text-danger"></span>
+                <label asp-for="UserOnTask.AppUserId" class="control-label"></label>
+                <select asp-for="UserOnTask.AppUserId" class="form-control" asp-items="Model.AppUserSelectList"></select>
+                <span asp-validation-for="UserOnTask.AppUserId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="UserOnTask.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
