--- a/Tasker/WebApp/Views/UserSkills/Edit.cshtml
+++ b/Tasker/WebApp/Views/UserSkills/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.UserSkill
+@model UserSkillEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,41 +13,41 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="UserSkill.Name" class="control-label"></label>
+                <input asp-for="UserSkill.Name" class="form-control" />
+                <span asp-validation-for="UserSkill.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Start" class="control-label"></label>
-                <input asp-for="Start" class="form-control" />
-                <span asp-validation-for="Start" class="text-danger"></span>
+                <label asp-for="UserSkill.Start" class="control-label"></label>
+                <input asp-for="UserSkill.Start" class="form-control" />
+                <span asp-validation-for="UserSkill.Start" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="End" class="control-label"></label>
-                <input asp-for="End" class="form-control" />
-                <span asp-validation-for="End" class="text-danger"></span>
+                <label asp-for="UserSkill.End" class="control-label"></label>
+                <input asp-for="UserSkill.End" class="form-control" />
+                <span asp-validation-for="UserSkill.End" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
+                <label asp-for="UserSkill.Comment" class="control-label"></label>
+                <input asp-for="UserSkill.Comment" class="form-control" />
+                <span asp-validation-for="UserSkill.Comment" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <label asp-for="UserSkill.UserId" class="control-label"></label>
+                <select asp-for="UserSkill.UserId" class="form-control" asp-items="Model.UserSelectList"></select>
+                <span asp-validation-for="UserSkill.UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SkillId" class="control-label"></label>
-                <select asp-for="SkillId" class="form-control" asp-items="ViewBag.SkillId"></select>
-                <span asp-validation-for="SkillId" class="text-danger"></span>
+                <label asp-for="UserSkill.SkillId" class="control-label"></label>
+                <select asp-for="UserSkill.SkillId" class="form-control" asp-items="Model.SkillSelectList"></select>
+                <span asp-validation-for="UserSkill.SkillId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class="form-control" asp-items="ViewBag.AppUserId"></select>
-                <span asp-validation-for="AppUserId" class="text-danger"></span>
+                <label asp-for="UserSkill.AppUserId" class="control-label"></label>
+                <select asp-for="UserSkill.AppUserId" class="form-control" asp-items="Model.AppUserSelectList"></select>
+                <span asp-validation-for="UserSkill.AppUserId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="UserSkill.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
