--- a/Tasker/WebApp/Views/Users/Edit.cshtml
+++ b/Tasker/WebApp/Views/Users/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Domain.User
+@model UserEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,41 +13,41 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <label asp-for="User.FirstName" class="control-label"></label>
+                <input asp-for="User.FirstName" class="form-control" />
+                <span asp-validation-for="User.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
+                <label asp-for="User.LastName" class="control-label"></label>
+                <input asp-for="User.LastName" class="form-control" />
+                <span asp-validation-for="User.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <label asp-for="User.Email" class="control-label"></label>
+                <input asp-for="User.Email" class="form-control" />
+                <span asp-validation-for="User.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
+                <label asp-for="User.Phone" class="control-label"></label>
+                <input asp-for="User.Phone" class="form-control" />
+                <span asp-validation-for="User.Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserTypeId" class="control-label"></label>
-                <select asp-for="UserTypeId" class="form-control" asp-items="ViewBag.UserTypeId"></select>
-                <span asp-validation-for="UserTypeId" class="text-danger"></span>
+                <label asp-for="User.UserTypeId" class="control-label"></label>
+                <select asp-for="User.UserTypeId" class="form-control" asp-items="Model.UserTypeSelectList"></select>
+                <span asp-validation-for="User.UserTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AppUserId" class="control-label"></label>
-                <select asp-for="AppUserId" class="form-control" asp-items="ViewBag.AppUserId"></select>
-                <span asp-validation-for="AppUserId" class="text-danger"></span>
+                <label asp-for="User.AppUserId" class="control-label"></label>
+                <select asp-for="User.AppUserId" class="form-control" asp-items="Model.AppUserSelectList"></select>
+                <span asp-validation-for="User.AppUserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="HourlyRateId" class="control-label"></label>
-                <select asp-for="HourlyRateId" class="form-control" asp-items="ViewBag.HourlyRateId"></select>
-                <span asp-validation-for="HourlyRateId" class="text-danger"></span>
+                <label asp-for="User.HourlyRateId" class="control-label"></label>
+                <select asp-for="User.HourlyRateId" class="form-control" asp-items="Model.HourlyRateSelectList"></select>
+                <span asp-validation-for="User.HourlyRateId" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="User.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
