Some CSS for admin added

--- a/Tasker/WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -1,1 +1,30 @@
-﻿test admin
+﻿<nav class='navbar__container' style='padding-bottom: 10px'>
+<div class='wrapper--wide flex-container flex--wrap'>
+<a class='navbar__logo' href='/admin'>
+<img alt="Tasker" height="72" src="~/assets/tasker.svg" />
+Internal
+</a>
+</div>
+</nav>
+
+<div class='alert__container'>
+</div>
+
+<div class='view--body'>
+<main class='wrapper--wide container'>
+<div class='' id='layout-main'>
+    <div class='container'>
+        <h1>Admin Login</h1>
+        <form class="new_user" id="new_user" action="/admin/login" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="SlUJDVgOj1E3XxOZ2Vg0HAH48/nlBWlhDnSByGpAL1IHrVfpz75RaDwJyjzHLjaNv+GwIB6g/7ViDCOU5IS3EQ==" /><label for="user_email">Email</label>
+            <input autocomplete="username" type="email" name="user[email]" id="user_email" />
+            <label for="user_password">Password</label>
+            <input autocomplete="current-password" type="password" name="user[password]" id="user_password" />
+            <input type="submit" name="commit" value="Login" class="btn btn-primary" />
+        </form>   
+    </div>
+</div>
+<footer></footer>
+
+
+</main>
+</div>
