--- a/Tasker/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - WebApp</title>
+
+    <title>@ViewData["Title"]Tasker Admin | Login New </title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
@@ -16,9 +17,9 @@
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE="/>
     </environment>
     <link rel="stylesheet" href="~/css/site.css"/>
+    <link rel="stylesheet" href="~/css/admin.css"/>
 </head>
 <body>
-
 
 @RenderBody()
 
