--- a/Tasker/WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -1,13 +1,4 @@
-﻿<nav class='navbar__container' style='padding-bottom: 10px'>
-<div class='wrapper--wide flex-container flex--wrap'>
-<a class='navbar__logo' href='/admin'>
-<img alt="Tasker" height="72" src="~/assets/tasker.svg" />
-Internal
-</a>
-</div>
-</nav>
-
-<div class='alert__container'>
+﻿<div class='alert__container'>
 </div>
 
 <div class='view--body'>
