Login and register page style added. Home page being built. Admin front page present.

--- a/Tasker/WebApp/Views/Home/Index.cshtml
+++ b/Tasker/WebApp/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div class="hero">
-    
+    <h1>Helping hand at your door</h1>
+    <h4>Find affordable background checked Taskers for help around the house</h4>
 </div>
 
 <div class="">
