--- a/Tasker/WebApp/Views/Shared/_Layout.cshtml
+++ b/Tasker/WebApp/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 <header>
     <nav class='navbar__container'>
         <div class='wrapper--wide flex-container flex--wrap'>
-            <a class='navbar__logo' href='/admin'>
+            <a class='navbar__logo' href=''>
                 <img alt="Tasker" height="72" src="~/assets/tasker.svg"/>
             </a>
         </div>
