All api Controllers replaced with UOW

--- a/Tasker/WebApp/Areas/Admin/Views/Home/Index.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <div class='view--body'>
 <main class='wrapper--wide container'>
 <div class='' id='layout-main'>
-    <div class='container'>
+    <div class='admin__container'>
         <h1>Admin Login</h1>
         <form class="new_user" id="new_user" action="/admin/login" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="SlUJDVgOj1E3XxOZ2Vg0HAH48/nlBWlhDnSByGpAL1IHrVfpz75RaDwJyjzHLjaNv+GwIB6g/7ViDCOU5IS3EQ==" /><label for="user_email">Email</label>
             <input autocomplete="username" type="email" name="user[email]" id="user_email" />
