--- a/Tasker/WebApp/Views/Home/Index.cshtml
+++ b/Tasker/WebApp/Views/Home/Index.cshtml
@@ -7,94 +7,63 @@
     <h4>Find affordable background checked Taskers for help around the house</h4>
 </div>
 
-<div class="">
+<div class="carousel-subcategory">
     <h2>Popular Services in Your Area</h2>
-<div class="container-fluid">
-    <div id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="9000">
-        <div class="carousel-inner row w-100 mx-auto" role="listbox">
-            <div class="carousel-item col-md-3  active">
-               <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 1" class="thumb">
-                      <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=1" alt="slide 1">
-                    </a>
-                  </div>
-                </div>
+<div class="carousel-container">
+  <div class="row">
+    <div class="col-lg-12">
+
+      <div id="feedPhotoCarousel" class="carousel slide w-100" data-ride="carousel">
+        <div class="carousel-inner w-100" role="listbox">
+          <div class="carousel-item">        
+            <div class="d-block col-3 content-item">
+              <h4>Fix around house</h4>
+              <img class="img-fluid" src="/assets/builderOverlay.jpg">
             </div>
-            <div class="carousel-item col-md-3 ">
-               <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 3" class="thumb">
-                     <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=2" alt="slide 2">
-                    </a>
-                  </div>
-                </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Catering</h4>
+              <img class="img-fluid" src="/assets/cookingOverlay.jpg">           
             </div>
-            <div class="carousel-item col-md-3 ">
-               <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 4" class="thumb">
-                     <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=3" alt="slide 3">
-                    </a>
-                  </div>
-                </div>
+          </div>
+          <div class="carousel-item active">
+            <div class="d-block col-3 content-item">
+              <h4>Move boxes</h4>
+              <img class="img-fluid" src="/assets/deliveryOverlay.jpg">
             </div>
-            <div class="carousel-item col-md-3 ">
-                <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 5" class="thumb">
-                     <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=4" alt="slide 4">
-                    </a>
-                  </div>
-                </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Housekeeping</h4>
+              <img class="img-fluid" src="/assets/cleaningOverlay.jpg">
             </div>
-            <div class="carousel-item col-md-3 ">
-              <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 6" class="thumb">
-                      <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=5" alt="slide 5">
-                    </a>
-                  </div>
-                </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Gardening</h4>
+              <img class="img-fluid" src="/assets/gardenOverlay.jpg">
             </div>
-            <div class="carousel-item col-md-3 ">
-               <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 7" class="thumb">
-                      <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=6" alt="slide 6">
-                    </a>
-                  </div>
-                </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Painting</h4>
+              <img class="img-fluid" src="/assets/blue-brushOverlay.jpg">
             </div>
-            <div class="carousel-item col-md-3 ">
-               <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 8" class="thumb">
-                      <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=7" alt="slide 7">
-                    </a>
-                  </div>
-                </div>
-            </div>
-             <div class="carousel-item col-md-3  ">
-                <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="image 2" class="thumb">
-                     <img class="img-fluid mx-auto d-block" src="//via.placeholder.com/600x400?text=8" alt="slide 8">
-                    </a>
-                  </div>
-                  
-                </div>
-            </div>
+          </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+        <a class="carousel-control-prev" href="#feedPhotoCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next text-faded" href="#carouselExample" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+        <a class="carousel-control-next" href="#feedPhotoCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
         </a>
+      </div>
+
     </div>
+  </div>
 </div>
 </div>
 
