--- a/Tasker/WebApp/Views/Home/Index.cshtml
+++ b/Tasker/WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,72 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="hero">
+    <h1>Helping hand at your door</h1>
+    <h4>Find affordable background checked Taskers for help around the house</h4>
+</div>
+
+<div class="carousel-subcategory">
+    <h2>Popular Services in Your Area</h2>
+<div class="carousel-container">
+  <div class="row">
+    <div class="col-lg-12">
+
+      <div id="feedPhotoCarousel" class="carousel slide w-100" data-ride="carousel">
+        <div class="carousel-inner w-100" role="listbox">
+          <div class="carousel-item">        
+            <div class="d-block col-3 content-item">
+              <h4>Fix around house</h4>
+              <img class="img-fluid" src="/assets/builderOverlay.jpg">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Catering</h4>
+              <img class="img-fluid" src="/assets/cookingOverlay.jpg">           
+            </div>
+          </div>
+          <div class="carousel-item active">
+            <div class="d-block col-3 content-item">
+              <h4>Move boxes</h4>
+              <img class="img-fluid" src="/assets/deliveryOverlay.jpg">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Housekeeping</h4>
+              <img class="img-fluid" src="/assets/cleaningOverlay.jpg">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Gardening</h4>
+              <img class="img-fluid" src="/assets/gardenOverlay.jpg">
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="d-block col-3 content-item">
+              <h4>Painting</h4>
+              <img class="img-fluid" src="/assets/blue-brushOverlay.jpg">
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#feedPhotoCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#feedPhotoCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+    </div>
+  </div>
+</div>
+</div>
+
+
+<div class="selling-proposition">
+
 </div>
