--- a/Tasker/WebApp/Areas/Admin/Views/Invoices/Delete.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/Invoices/Delete.cshtml
@@ -4,12 +4,9 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Invoice</h4>
-    <hr />
+<div class="container-fluid">
+    <h4 class="title c-grey-900 mT-10 mB-30">Are you sure you want to delete this invoice?</h4>
+    <br/>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.InvoiceNumber)
@@ -57,7 +54,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a style="margin-right: 5rem;" class="btn btn-outline-success" role="button" asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
     </form>
 </div>
