--- a/Tasker/WebApp/Areas/Admin/Views/TaskerTasks/Details.cshtml
+++ b/Tasker/WebApp/Areas/Admin/Views/TaskerTasks/Details.cshtml
@@ -4,11 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>TaskerTask</h4>
-    <hr />
+<div class="container-fluid">
+    <h4 class="title c-grey-900 mT-10 mB-30">Task Details</h4>
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TaskName)
@@ -48,7 +45,7 @@
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class = "col-sm-3">
+    <a class="btn btn-outline-success" role="button" asp-action="Index">Back to List</a>
+    <a class="btn btn-info" role="button" style="float: right;" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
 </div>
